// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment orion-fusion-theme"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text="comment"
/>
`;

exports[`should render a comment with text 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text="comment"
/>
`;

exports[`should render a comment with the attention textStyle on text 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text="ItemComment"
  textStyle="attention"
/>
`;

exports[`should render a comment with the secondary textStyle on text 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text="ItemComment"
  textStyle="secondary"
/>
`;

exports[`should render a comment with the strikeThrough textStyle on text 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text="ItemComment"
  textStyle="strikeThrough"
/>
`;

exports[`should render a default component 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={false}
  text=""
/>
`;

exports[`should render a truncated comment 1`] = `
<InjectIntl(ItemDisplay)
  className="item-comment"
  icon={
    <IconComment
      className="inline-icon"
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isTruncated={true}
  text="comment1comment1comment1comment1comment1comment1comment1comment1"
/>
`;
